--- a/external/harvestPackages/harvestPackages.props
+++ b/external/harvestPackages/harvestPackages.props
@@ -18,6 +18,7 @@
 <PackageReference Include="System.Configuration.ConfigurationManager">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Data.SqlClient">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Diagnostics.DiagnosticSource">  <Version>4.5.0</Version></PackageReference>
+<PackageReference Include="System.Drawing.Common">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.IO.FileSystem.AccessControl">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.IO.Packaging">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.IO.Pipes.AccessControl">  <Version>4.5.0</Version></PackageReference>
