Add unloadable AssemblyLoadContext API and tests (#32002)
* Add unloadable AssemblyLoadContext API and tests

The change is based on #14763, but I had to change many things due to
the fact that the project.json files are not used anymore and due to the
slighly different semantics of the Unloading event, which now fires when
the unloading is about to start and doesn't indicate the unload is
almost done as before.

Additional changes:
* Tests for all remaining unsupported features:
  * delegate marshalling for types in collectible assemblies
  * FixedAddressValueTypeAttribute
  * COM interop
* Removed checked in binary System.Runtime.Loader.Test.Assembly.dll,
modified the msbuild projects to build it at the build time instead.
* Added the new APIs to ApiCompatBaseline

--- a/src/System.Runtime.Loader/tests/System.Runtime.Loader.Tests.csproj
+++ b/src/System.Runtime.Loader/tests/System.Runtime.Loader.Tests.csproj
@@ -7,10 +7,29 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyLoadContextTest.cs" />
+    <Compile Include="CollectibleAssemblyLoadContextTest.cs" />
+    <Compile Include="CollectibleAssemblyLoadContextTest.Windows.cs" Condition="'$(TargetsWindows)' == 'true'"/>
     <Compile Include="CustomTPALoadContext.cs" />
     <Compile Include="ResourceAssemblyLoadContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="System.Runtime.Loader.Test.Assembly.dll" />
+    <ProjectReference Include="System.Runtime.Loader.Test.Assembly\System.Runtime.Loader.Test.Assembly.csproj">
+      <Project>{b402782f-de0a-41fa-b364-60612a786fb2}</Project>
+      <Name>System.Runtime.Loader.Test.Assembly</Name>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <OutputItemType>EmbeddedResource</OutputItemType>
+    </ProjectReference>
+    <ProjectReference Include="System.Runtime.Loader.Test.Assembly2\System.Runtime.Loader.Test.Assembly2.csproj">
+      <Project>{b402782f-de0a-41fa-b364-60612a786fb2}</Project>
+      <Name>System.Runtime.Loader.Test.Assembly2</Name>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <OutputItemType>EmbeddedResource</OutputItemType>
+    </ProjectReference>
+    <ProjectReference Include="System.Runtime.Loader.Test.AssemblyNotSupported\System.Runtime.Loader.Test.AssemblyNotSupported.csproj">
+      <Project>{b402782f-de0a-41fa-b364-60612a786fb2}</Project>
+      <Name>System.Runtime.Loader.Test.AssemblyNotSupported</Name>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <OutputItemType>EmbeddedResource</OutputItemType>
+    </ProjectReference>
   </ItemGroup>
 </Project>
