--- a/src/System.Runtime.Loader/tests/System.Runtime.Loader.Tests.csproj
+++ b/src/System.Runtime.Loader/tests/System.Runtime.Loader.Tests.csproj
@@ -3,12 +3,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <ProjectGuid>{701CB3BC-00DC-435D-BDE4-C5FC29A708A7}</ProjectGuid>
     <RootNamespace>System.Runtime.Loader.Tests</RootNamespace>
-    <Configurations>netcoreapp-Debug;netcoreapp-Release;uap-Debug;uap-Release</Configurations>
+    <Configurations>netcoreapp-Unix-Debug;netcoreapp-Unix-Release;netcoreapp-Windows_NT-Debug;netcoreapp-Windows_NT-Release;uap-Debug;uap-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyLoadContextTest.cs" />
     <Compile Include="CollectibleAssemblyLoadContextTest.cs" />
-    <Compile Include="CollectibleAssemblyLoadContextTest.Windows.cs" Condition="'$(TargetsWindows)' == 'true'"/>
+    <Compile Include="CollectibleAssemblyLoadContextTest.Windows.cs" Condition="'$(TargetsWindows)' == 'true'" />
     <Compile Include="CustomTPALoadContext.cs" />
     <Compile Include="ResourceAssemblyLoadContext.cs" />
   </ItemGroup>
