Adds support for a WebAssembly netcoreappaot configuration for building managed libraries and packages. This is enough to produce a package of libraries that CoreRT's WebAssembly implementation can consume.

--- a/src/System.Runtime.Intrinsics/src/Configurations.props
+++ b/src/System.Runtime.Intrinsics/src/Configurations.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <BuildConfigurations>
       netcoreapp-Windows_NT;
+      netcoreappaot-WebAssembly;
       netcoreapp-Unix;
     </BuildConfigurations>
   </PropertyGroup>
