Just exclude Utf8StringComparer entirely from the ref assembly "build -allConfigurations -buildArch=x64 -Release" breaks, but "build -framework=netcoreappaot -buildArch=x64 -Release" succeeds. Will figure it out later.

--- a/src/System.Runtime.Extensions/ref/System.Runtime.Extensions.csproj
+++ b/src/System.Runtime.Extensions/ref/System.Runtime.Extensions.csproj
@@ -7,9 +7,9 @@
     <Compile Include="System.Runtime.Extensions.cs" />
     <Compile Include="System.Runtime.Extensions.Manual.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp' AND '$(TargetsAOT)'!='true'">
+  <!--<ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp' AND '$(TargetsAOT)'!='true'">
     <Compile Include="System.Runtime.Extensions.netcoreapp.cs" />
-  </ItemGroup>
+  </ItemGroup>-->
   <ItemGroup>
     <ProjectReference Include="..\..\System.Runtime\ref\System.Runtime.csproj" />
     <ProjectReference Include="..\..\System.Security.Principal\ref\System.Security.Principal.csproj" />
