--- a/src/System.Text.Encoding.CodePages/src/System.Text.Encoding.CodePages.csproj
+++ b/src/System.Text.Encoding.CodePages/src/System.Text.Encoding.CodePages.csproj
@@ -10,9 +10,7 @@
     <Configurations>netcoreapp-Windows_NT-Debug;netcoreapp-Windows_NT-Release;netcoreapp2.0-Windows_NT-Debug;netcoreapp2.0-Windows_NT-Release;netstandard-Debug;netstandard-Release;netstandard-Windows_NT-Debug;netstandard-Windows_NT-Release;uap-Windows_NT-Debug;uap-Windows_NT-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="$(CommonPath)\Microsoft\Win32\SafeHandles\SafeAllocHHandle.cs">
-      <Link>Common\Microsoft\Win32\SafeHandles\SafeAllocHHandle.cs</Link>
-    </Compile>
+    <Compile Include="Microsoft\Win32\SafeHandles\SafeAllocHHandle.cs" />
     <Compile Include="System\Text\BaseCodePageEncoding.cs" />
     <Compile Include="System\Text\CodePagesEncodingProvider.cs" />
     <Compile Include="System\Text\DBCSCodePageEncoding.cs" />
